--- a/home/templates/includes/events.html
+++ b/home/templates/includes/events.html
@@ -6,74 +6,76 @@
 
 <div class="album py-5 bg-light">
     <div class="container">
-
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
+            {% for event in events %}
             <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c"/>
-                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                    </svg>
-
+                <div class="card shadow-sm h-100">
                     <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        <!-- Event title -->
+                        <h5 class="card-title card-content__title my-3 fw-bolder">{{ event.title }}</h5>
+
+                        <!-- Event description -->
+                        <p class="card-text text-muted">{{ event.description }}</p>
+
+                        <!-- Event category -->
+                        <p class="pt-2"><span class="badge card-content__badge">{{ event.event_category }}</span></p>
+
+                        <!-- Event details -->
+                        <div class="py-3">
+                            {% if event.event_date %}
+                                <div class="card-content__key fw-bolder">
+                                    <p>Date:</p>
+                                </div>
+                                <div class="card-content__value">
+                                    <p>{{ event.event_date }}</p>
+                                </div>
+                            {% else %}
+                                <div style="display: block;"></div>
+                            {% endif %}
+                            {% if event.event_time %}
+                                <div class="card-content__key fw-bolder">
+                                    <p>Time:</p>
+                                </div>
+                                <div class="card-content__value">
+                                    <p>{{ event.event_time }}</p>
+                                </div>
+                            {% else %}
+                                <div style="display: block;"></div>
+                            {% endif %}
+                            {% if event.event_location %}
+                                <div class="card-content__key fw-bolder">
+                                    <p>Location:</p>
+                                </div>
+                                <div class="card-content__value">
+                                    <p>{{ event.event_location }}</p>
+                                </div>
+                            {% else %}
+                                <div style="display: block;"></div>
+                            {% endif %}
+                            <div class="card-content__key fw-bolder">
+                                <p>Price:</p>
                             </div>
-                            <small class="text-muted">9 mins</small>
+                            <div class="card-content__value">
+                                <p>{{ event.event_price }}</p>
+                            </div>
+                            <div class="card-content__key fw-bolder">
+                                <p>Contact:</p>
+                            </div>
+                            <div class="card-content__value">
+                                <p>{{ event.event_contact }}</p>
+                            </div>
+                        </div>
+
+                        <!-- Card buttons -->
+                        <div class="d-flex justify-content-between align-items-center pt-3">
+                            <div class="btn-group">
+                                <a href="{% url 'event_detail' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c"/>
-                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                    </svg>
-
-                    <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            </div>
-                            <small class="text-muted">9 mins</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c"/>
-                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                    </svg>
-
-                    <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            </div>
-                            <small class="text-muted">9 mins</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
