--- a/events/templates/events/event-detail.html
+++ b/events/templates/events/event-detail.html
@@ -65,19 +65,25 @@
             </div>
         </div>
 
-        {% if event.user != user_db %}
-        <div class="d-flex justify-content-between align-items-center my-4 offset-md-2">
-            <div class="btn-group">
-                <a href="{% url 'edit_event' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
-                <a href=""><button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
-            </div>
-        </div>
-        <div class="col-12 col-md-10 offset-md-1 text-center mt-4 mb-3 event-detail__return">
-            <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'profile' %}"> Return to profile</a></p>
-        </div>
+        {% if request.user.is_authenticated %}
+            {% if event.user != user_db %}
+                <div class="d-flex justify-content-between align-items-center my-4 offset-md-2">
+                    <div class="btn-group">
+                        <a href="{% url 'edit_event' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
+                        <a href=""><button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-10 offset-md-1 text-center mt-4 mb-3 event-detail__return">
+                    <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'profile' %}"> Return to profile</a></p>
+                </div>
+            {% else %}
+                <div class="col-12 col-md-10 offset-md-1 text-center mt-4 mb-3 event-detail__return">
+                    <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'profile' %}"> Return to profile</a></p>
+                </div>
+            {% endif %}
         {% else %}
             <div class="col-12 col-md-10 offset-md-1 text-center mt-4 mb-3 event-detail__return">
-                <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'profile' %}"> Return to profile</a></p>
+                <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'home' %}"> Return to home</a></p>
             </div>
         {% endif %}
     </div>
